--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 "Hello World this is my updated page." 
+
+Check out my samples of a site using Bootstrap <a href = "http://scobar11.github.io/project-bootstrap/">here:</a>
