--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
-"Hello World this is my updated page." 
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>SCOTT BARON</title>
 
-Check out my samples of a site using Bootstrap <a href = "http://scobar11.github.io/project-bootstrap/">here:</a>
+    <!-- Latest compiled and minified CSS -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+        <!-- Optional theme -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
+      <link rel="stylesheet" type="text/css" href="main.css">
+
+        <!-- Latest compiled and minified JavaScript -->
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+	</head>
+	<body>
+		
+    <img src="images/avatar.png">
+
+	</body>
+</html>
